resolved outer flex box wrapping under line still need o resolve text overflowing picture

--- a/about.css
+++ b/about.css
@@ -7,7 +7,7 @@
     display: flex;
  
     flex-direction: row;
-    flex-wrap: wrap;
+   
 }
 
 
@@ -77,6 +77,7 @@
 .p {
 
     line-break: auto;
+    word-wrap: break-word;
 }
 
 .flexbox-gig-list{
@@ -94,16 +95,14 @@
 
 }
 
-.flexbox-item ev-list li {
-    font-size: 3rem ;
-}
+
  
 .flexbox-item-ev {
     
     width: 0 auto;
     padding: 0 0 ;
     margin: 0 0;
-   font-size: 1.3rem;
+    font-size: 1.3rem;
     
   
     }
